update version to 2.0

--- a/task33.html
+++ b/task33.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>听指令的小方块一</title>
+	<title>听指令的小方块二</title>
 <link rel="stylesheet" type="text/css" href="task33.css">
 </head>
 <body>
