--- a/task33.html
+++ b/task33.html
@@ -3,162 +3,169 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>听指令的小方块二</title>
+  <title>听指令的小方块三</title>
 <link rel="stylesheet" type="text/css" href="task33.css">
 </head>
 <body>
- 	<div id="container">
- 		<ul id="row-axis">
- 		    <li id="null"></li>
- 			<li class="row-axis-item">1</li>
- 			<li class="row-axis-item">2</li>
- 			<li class="row-axis-item">3</li>
- 			<li class="row-axis-item">4</li>
- 			<li class="row-axis-item">5</li>
- 			<li class="row-axis-item">6</li>
- 			<li class="row-axis-item">7</li>
- 			<li class="row-axis-item">8</li>
- 			<li class="row-axis-item">9</li>
- 			<li class="row-axis-item">10</li>
- 		</ul>
- 		<ul>
- 			<li class="col-axis-item">1</li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li class="right-item"></li>
- 		</ul>
- 		<ul>
- 			<li class="col-axis-item">2</li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li class="right-item"></li>
- 		</ul>
- 		<ul>
- 			<li class="col-axis-item">3</li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li class="right-item"></li>
- 		</ul>
- 		<ul>
- 			<li class="col-axis-item">4</li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li class="right-item"></li>
- 		</ul>
- 		<ul>
- 			<li class="col-axis-item">5</li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li class="right-item"></li>
- 		</ul>
- 		<ul>
- 			<li class="col-axis-item">6</li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li class="right-item"></li>
- 		</ul>
- 		<ul>
- 			<li class="col-axis-item">7</li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li class="right-item"></li>
- 		</ul>
- 		<ul>
- 			<li class="col-axis-item">8</li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li class="right-item"></li>
- 		</ul>
- 		<ul>
- 			<li class="col-axis-item">9</li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li></li>
- 			<li class="right-item"></li>
- 		</ul>
- 		<ul>
- 			<li class="col-axis-item">10</li>
- 			<li class="bottom-item"></li>
- 			<li class="bottom-item"></li>
- 			<li class="bottom-item"></li>
- 			<li class="bottom-item"></li>
- 			<li class="bottom-item"></li>
- 			<li class="bottom-item"></li>
- 			<li class="bottom-item"></li>
- 			<li class="bottom-item"></li>
- 			<li class="bottom-item"></li>
- 			<li class="bottom-item right-item"></li>
- 		</ul>
- 		<div id="car">
- 			<span id="head"></span>
- 		</div>
-  	</div>
-  	<div id="cmd">
-  		<label>输入命令:<input type="text" id="cmd-input"></label>
- 	    <span id="cmd-btn">执行</span>
-  	</div>
+  <div id="cmd">
+    <div id="area-box">
+      <div id="row-num">
+        <div id="top">1</div>
+      </div>
+      <textarea id="cmdArea"></textarea>
+    </div>
+    <div id="btn-box">
+      <span id="cmd-btn">执行</span><span id="re-btn">重置</span>
+    </div>
+  </div>
+  <div id="container">
+    <ul id="row-axis">
+        <li id="null"></li>
+      <li class="row-axis-item">1</li>
+      <li class="row-axis-item">2</li>
+      <li class="row-axis-item">3</li>
+      <li class="row-axis-item">4</li>
+      <li class="row-axis-item">5</li>
+      <li class="row-axis-item">6</li>
+      <li class="row-axis-item">7</li>
+      <li class="row-axis-item">8</li>
+      <li class="row-axis-item">9</li>
+      <li class="row-axis-item">10</li>
+    </ul>
+    <ul>
+      <li class="col-axis-item">1</li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li class="right-item"></li>
+    </ul>
+    <ul>
+      <li class="col-axis-item">2</li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li class="right-item"></li>
+    </ul>
+    <ul>
+      <li class="col-axis-item">3</li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li class="right-item"></li>
+    </ul>
+    <ul>
+      <li class="col-axis-item">4</li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li class="right-item"></li>
+    </ul>
+    <ul>
+      <li class="col-axis-item">5</li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li class="right-item"></li>
+    </ul>
+    <ul>
+      <li class="col-axis-item">6</li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li class="right-item"></li>
+    </ul>
+    <ul>
+      <li class="col-axis-item">7</li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li class="right-item"></li>
+    </ul>
+    <ul>
+      <li class="col-axis-item">8</li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li class="right-item"></li>
+    </ul>
+    <ul>
+      <li class="col-axis-item">9</li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li class="right-item"></li>
+    </ul>
+    <ul>
+      <li class="col-axis-item">10</li>
+      <li class="bottom-item"></li>
+      <li class="bottom-item"></li>
+      <li class="bottom-item"></li>
+      <li class="bottom-item"></li>
+      <li class="bottom-item"></li>
+      <li class="bottom-item"></li>
+      <li class="bottom-item"></li>
+      <li class="bottom-item"></li>
+      <li class="bottom-item"></li>
+      <li class="bottom-item right-item"></li>
+    </ul>
+    <div id="car">
+      <span id="head"></span>
+    </div>
+    </div>
 <script src="task33.js"></script>
 </body>
 </html>
