update version to 3.0

--- a/task33.html
+++ b/task33.html
@@ -11,16 +11,27 @@
     <div id="area-box">
       <div id="row-num">
         <div id="top">1</div>
+        <div id="row-ol"></div>
       </div>
       <textarea id="cmdArea"></textarea>
     </div>
     <div id="btn-box">
       <span id="cmd-btn">执行</span><span id="re-btn">重置</span>
     </div>
+    <div id="info">
+      <h3>可输入指令序列，n代表数字</h3>
+      <ol>GO</ol>
+      <ol>GO n</ol>
+      <ol>TUN LEF，TUN RIG，TUN BAC</ol>
+      <ol>TRA LEF n，TRA RIG n，TRA TOP n，TRA BOT n</ol>
+      <ol>TRA LEF，TRA RIG，TRA TOP，TRA BOT</ol>
+      <ol>MOV LEF n，MOV RIG n，MOV TOP n，MOV BOT n</ol>
+      <ol>MOV LEF，MOV RIG，MOV TOP，MOV BOT</ol>
+    </div>
   </div>
   <div id="container">
     <ul id="row-axis">
-        <li id="null"></li>
+      <li id="null"></li>
       <li class="row-axis-item">1</li>
       <li class="row-axis-item">2</li>
       <li class="row-axis-item">3</li>
