add build and bru command

--- a/task33.html
+++ b/task33.html
@@ -16,7 +16,9 @@
       <textarea id="cmdArea"></textarea>
     </div>
     <div id="btn-box">
-      <span id="cmd-btn">执行</span><span id="re-btn">重置</span>
+      <span id="cmd-btn">执行</span>
+      <span id="re-btn">重置</span>
+      <span id="build-btn">随机建墙</span>
     </div>
     <div id="info">
       <h3>可输入指令序列，n代表数字</h3>
