fixed layout in small screen

--- a/task33.html
+++ b/task33.html
@@ -29,7 +29,7 @@
       <ol>TRA LEF，TRA RIG，TRA TOP，TRA BOT</ol>
       <ol>MOV LEF n，MOV RIG n，MOV TOP n，MOV BOT n</ol>
       <ol>MOV LEF，MOV RIG，MOV TOP，MOV BOT</ol>
-      <ol>自动寻最短路径命令 MOVTO x，y  x为行数 y为列数</ol>
+      <ol>自动寻最短路径命令 MOVTO x，y  x为行数 y为列数(分隔符为半角逗号)</ol>
     </div>
   </div>
   <div id="container">
